--- a/debian/rules
+++ b/debian/rules
@@ -38,3 +38,5 @@ override_dh_auto_install:
 	cp -r debian/id $(DEB_PATH)$(ETC_PATH)
 	ln -s $(ETC_PATH) $(DEB_PATH)$(INSTALL_PATH)/etc
 	cp debian/update-play-alternatives $(DEB_PATH)$(SBIN_PATH)/
+	sed "s/_VERSION_/$(VERSION)/g" debian/play.prerm.template > debian/play.prerm
+	sed "s/_VERSION_/$(VERSION)/g" debian/play.postinst.template > debian/play.postinst
