samples and test owned by playapps

--- a/debian/play.postinst.template
+++ b/debian/play.postinst.template
@@ -4,6 +4,8 @@ set -e
 
 VERSION=_VERSION_
 
+chown playapps:playapps /usr/share/play/1.2.4/samples-and-tests
+
 case "$1" in
 configure)
 	update-alternatives --install /usr/bin/play play /usr/share/play/${VERSION}/play 1221000021
