--- a/debian/play.postinst.template
+++ b/debian/play.postinst.template
@@ -4,7 +4,7 @@ set -e
 
 VERSION=_VERSION_
 
-chown playapps:playapps /usr/share/play/1.2.4/samples-and-tests
+chown playapps:playapps /usr/share/play/${VERSION}/samples-and-tests
 
 case "$1" in
 configure)
